# mexOS

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  gen_initrd_entries.cmake  grub.cfg.in  linker.ld  run.sh  toolchain-macos.cmake  toolchain.cmake
.github/workflows/: build.yml  generate_uml.yml
docs/UML/: arch_core.puml  mm_sched_ipc.puml  user_include.puml
include/protocols/: block_protocol.h  console_protocol.h  devmgr_protocol.h  input_protocol.h  vfs_protocol.h
kernel/: kernel.c  kernel.h
kernel/arch/i686/: arch.h  boot.s  gdt.c  gdt.h  gdt_asm.s  idt.c  idt.h  idt_asm.s
kernel/core/: acpi.c  acpi.h  ata.c  ata.h  basic.c  capability.h  console.c  console.h  debug_utils.c  editor.c  elf.c  elf.h  fs.c  fs.h  initrd.c  initrd.h  keyboard.c  keyboard.h  log.c  log.h  nameserver.h  pci.c  pci.h  rtc.c  rtc.h  serial.c  shell.c  shell.h  string.c  syscall.c  syscall.h  sysmon.c  timer.c  timer.h  tui.c  vesa.c  vesa.h  vterm.c  vterm.h
kernel/drivers/bus/: acpi.c  acpi.h  pci.c  pci.h
kernel/drivers/char/: rtc.c  rtc.h  serial.c  serial.h
kernel/drivers/input/: keyboard.c  keyboard.h
kernel/drivers/storage/: ahci.c  ahci.h  ata.c  ata.h
kernel/drivers/video/: vesa.c  vesa.h
kernel/fs/: diskfs.c  diskfs.h  fs.c  fs.h
kernel/include/: cast.h  config.h  string.h  types.h
kernel/ipc/: ipc.c  ipc.h
kernel/lib/: debug_utils.c  debug_utils.h  log.c  log.h  string.c
kernel/mm/: heap.c  heap.h  pmm.c  pmm.h  vmm.c  vmm.h
kernel/sched/: sched.c  sched.h  switch.s
kernel/sys/: sysmon.c  sysmon.h  timer.c
kernel/ui/: basic.c  basic.h  console.c  console.h  disk_installer.c  disk_installer.h  editor.c  editor.h  shell.c  tui.c  tui.h  vterm.c
servers/block/: ahci.c  ahci.h  ata.c  ata.h  main.c  protocol.h
servers/console/: console.c  console.h  main.c  protocol.h  vesa.c  vesa.h  vterm.c  vterm.h
servers/devmgr/: acpi.c  acpi.h  main.c  pci.c  pci.h  protocol.h
servers/input/: keyboard.c  keyboard.h  main.c  protocol.h
servers/lib/: CMakeLists.txt  block_client.c  block_client.h  io_port.c  io_port.h  ipc_client.c  ipc_client.h  memory.c  memory.h
servers/shell/: basic.c  basic.h  editor.c  editor.h  main.c  shell.c  shell.h  shell_ipc.c  shell_ipc.h  tui.c  tui.h
servers/vfs/: diskfs.c  diskfs.h  fs.c  fs.h  main.c  protocol.h
shared/: log.c  log.h  serial.c  serial.h  string.c
src/: cxxSupport.cpp  dataTypes.h  exception.s  gdt.s  interrupts.cpp  interrupts.h  kernelUtils.cpp  kernelUtils.h  loader.s  memory.cpp  memory.h  mexKernel.cpp  mexKernel.h  mexOS.cpp  mexSystem.cpp  shell.cpp  switch.s  userlib.cpp  userlib.h
tests/: test_framework.c  test_framework.h  test_runner.c  test_runner.h  test_task.c  test_task.h
tests/core/: test_fs.c  test_fs.h  test_string.c  test_string.h
tests/ipc/: test_ipc.c  test_ipc.h
tests/mm/: test_heap.c  test_heap.h  test_pmm.c  test_pmm.h
tests/sched/: test_sched.c  test_sched.h
tests/types/: test_types.c  test_types.h
user/: user.ld
user/init/: init.c  init.h
user/lib/: crt0.s  syscall.h
